# Image-Presenter

./: LICENSE  README.md
Addons/: datetime.js  scheduled-restart.js
Addons Tauri/datetime/: addon.toml  backend.lua  frontend.js
Addons Tauri/scheduled-restart/: addon.toml  backend.lua  frontend.js
Source Code Tauri/src-tauri/src/: addon.rs  config.rs  main.rs
Source Code Tauri/web/tabs/: media.html
SourceCode/: build-prepare.js  index.html  main.js  mainapp.css  package-lock.json  package.json  pubspec.yaml
SourceCode/lib/: main.dart
SourceCode/lib/backend/: addons.dart  config.dart  media.dart  web_server.dart
SourceCode/src-tauri/: Cargo.toml  tauri.conf.json
SourceCode/src-tauri/src/: Network.rs  Update.rs  Web server.rs  addon.rs  main.rs  paths.rs
SourceCode/web/: index.html  main.js
SourceCode/web/tabs/: addons.html  display.html  network.html  update.html
SourceCodeOLD-Electron/: image-scaling.js  main.js  package.json  preload.js  updateapp.js
SourceCodeOLD-Electron/web/: index.html
SourceCodeOLD-Tauri/src-tauri/: Cargo.toml  tauri.conf.json
SourceCodeOLD-Tauri/src-tauri/src/: fonts.rs  media.rs
SourceCodeOLD-Tauri/web/: styles.css
